fix: Modified CORS configuration